--- a/requirements.txt
+++ b/requirements.txt
@@ -22,5 +22,5 @@ youtube-transcript-api==0.6.2
 pylatexenc==2.10
 prettytable==3.12.0
 e2b_code_interpreter
-PyMovieDb
-lxml_html_clean
+PyMovieDb==0.0.9
+lxml_html_clean==0.4.1
